@@ -6,8 +6,8 @@ screenshot  = screenshot.jpg
 engine = phptemplate
 
 ; Stylesheets
-stylesheets[all][] = css/reset.css
 stylesheets[all][] = css/cbase.css
 
 ; Scripts
+scripts[] = js/localscroll-1.2.7.js
 scripts[] = js/cbase.js
